# new-econtrol-project

./: .gitignore  DOCUMENTO MAESTRO DE PROYECTO.txt  README.md  deploy_artifacts.ps1  docker-compose.yml  eControl Plan Maestro Completo.txt  pack_release.ps1
Release_Build/: config.json
agent-service/: Cargo.toml  README.md  launch_client.bat
agent-service/agent-release/: config.json  launch_client.bat
agent-service/src/: main.rs  security.rs
agent-ui/: package-lock.json  package.json
agent-ui/src/: App.css  App.tsx
agent-ui/src-tauri/: Cargo.toml  tauri.conf.json
backend/: .env.example  README.md  check_iconv.js  create_zone.ts  debug_pc03.js  fetch_key.ts  init_migration.sql  nest-cli.json  package-lock.json  package.json  pc_debug_data.json  reset_pc_status.js  test_ping.js  tsconfig.build.json
backend/prisma/: schema.prisma
backend/scripts/: check-api-key.js  clean-db.ts  cleanup_sessions.ts  manual_cleanup.ts  reset_sessions.ts
backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
client-dotnet/: deploy_v2.ps1  eControl.Client.sln  event.txt  install_service.txt  kill_agents.bat  qc  ui_wrapper.bat
client-dotnet/Release_V2/: agent-master.deps.json  config.json  install_service.bat  uninstall_clean.bat
client-dotnet/eControl.Agent.Launcher/: Program.cs  eControl.Agent.Launcher.csproj
client-dotnet/eControl.Agent.Master/: Program.cs  Worker.cs  eControl.Agent.Master.csproj
client-dotnet/eControl.Agent.Shared/: Models.cs  (+1 more)
dashboard/: README.md  package-lock.json  package.json  pnpm-lock.yaml
docs/: DOCKER_SETUP.md
(+129 files in other folders)
